[package]
name = "scroll_rpg_game_template"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy-tnua = "0.24.0"
bevy_sprite3d = "5.0.0"
egui = "0.31.1"
bevy_egui = "0.34.1"
avian3d = "0.3.0"
bevy-tnua-avian3d = "0.5.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
